<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ChatActivity">


    <include
        android:id="@+id/chat_tool_bar"
        layout="@layout/app_bar"
        android:layout_width="411dp"
        android:layout_height="62dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="63dp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chat_tool_bar"
        app:layout_constraintBottom_toTopOf="@+id/viewPager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:tabSelectedTextColor="@color/colorAccent">


        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabChat"
            android:layout_width="296dp"
            android:layout_height="83dp"
            android:text="@string/chat_heading"
            tools:layout_editor_absoluteX="67dp"
            tools:layout_editor_absoluteY="648dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_heading" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friends_heading" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabRequests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requests" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="418dp"
        android:layout_height="545dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


    </androidx.viewpager.widget.ViewPager>


</androidx.constraintlayout.widget.ConstraintLayout>































