<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Profile">

    <include
        android:id="@+id/profile_bar"
        layout="@layout/app_bar" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_pic"
        android:layout_width="280dp"
        android:layout_height="297dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="355dp"
        android:foregroundGravity="center"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="122dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="279dp"
        android:fontFamily="@font/aref_ruqaa"
        android:gravity="center"
        android:text="@string/profile_name"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="240dp"
        android:fontFamily="@font/aref_ruqaa"
        android:gravity="center"
        android:text="@string/profile_status"
        android:textColor="@color/colorAccent"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/total_friends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="146dp"
        android:fontFamily="@font/aref_ruqaa"
        android:gravity="center"
        android:text="Total Friends"
        android:textColor="@color/colorAccent"
        android:textSize="20dp" />

    <Button
        android:id="@+id/request_btn"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="77dp"
        android:gravity="center"
        android:text="@string/sendRequest"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reject_btn"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="115dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="21dp"
        android:gravity="center"
        android:text="@string/rejectRequest"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:visibility="invisible" />
</RelativeLayout>