<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="128dp"
        android:fontFamily="cursive"
        android:freezesText="true"
        android:gravity="center_horizontal|fill_horizontal"
        android:includeFontPadding="false"
        android:text="@string/chatterbox"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="74dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="294dp"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/login_btn"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="196dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="180dp"
        android:text="@string/login"
        android:textSize="18sp" />


        <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_btn"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="-113dp"
        android:backgroundTint="@color/colorPrimary"
        android:backgroundTintMode="screen"
        android:freezesText="true"
        android:gravity="center_horizontal|fill_horizontal"
        android:includeFontPadding="false"
        android:text="@string/new_to_chatterbox_register_here"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />


</RelativeLayout>