<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="134dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorAccent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/dp"
            android:layout_width="104dp"
            android:layout_height="101dp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="5sp"
            android:src="@drawable/profile" />

        <LinearLayout
            android:layout_width="171dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                style="@android:style/Widget.Material.Light.EditText"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aref_ruqaa"
                android:text="@string/user_name"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/status"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/aref_ruqaa"
                android:text="@string/current_status"
                android:textAlignment="textStart"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="124dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/accept_btn"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:text="@string/acceptBtn"
                android:visibility="invisible" />

            <Button
                android:id="@+id/reject_btn"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:text="@android:string/cancel"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>